--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,14 @@ jobs:
 
    steps:
      - uses: actions/checkout@v6.0.2
-     - name: setup Node JS
+     - name: setup Node.JS
        uses: actions/setup-node@v6.2.0
        with:
-        node-version: 24.x
-     - name: Install Dependencies
-        runs: npm install
+        node-version: 18
+        
+     - name: Install dependencies
+       run: npm install
+       
      - name: Build Angular App
-       runs: npm run build
+       run: npm run build
    
